--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./sito/pallavolo.css">
+    <title>PaoloBall</title>
+    <header style="background-color: wheat; height: 125px;">
+            <div class="centrato">
+                <nav class="menu">
+                    <ul>
+                        <li class="Storia"> <a href="PALLAVOLO.html"> Storia</a></li>
+                        <li class="Regolamento"> <a href="regolamento.html"> Regolamento</a></li>
+                        <li class="Ruoli"> <a href="ruoli.html"> Ruoli</a></li>
+                        <li class="Beach Volley"> <a href="beach_volley.html"> Beach Volley</a></li>
+                        <li class="Prodotti"> <a href="prodotti.html">Prodotti</a></li>
+                        <li class="Accedi"> <a href="accesso.html"> Accedi</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <img src="sito/pallavolo/logo_ufficiale.png" alt="logo" style="width: 125px; margin-left: 5%;">
+    </header>
+</head>
 
+<body style="background-color: wheat;">
+    <div class="accesso">
+        <form action="PALLAVOLO.html">
+            <label for="fname">USERNAME:</label><br>
+            <input type="text" id="fname" name="fname" value=""><br>
+            <label for="lname">EMAIL:</label><br>
+            <input type="text" id="lname" name="lname" value=""><br><br>
+            <button id="accedi">ACCEDI</button>
+        </form> 
+    </div>
+    <img src="sito/pallavolo/accesso.jpg" alt="avatar" style="width:800px; margin-top: 5%;">
+</body>
+</html>
